# Plan2Sprint

./: .gitignore  LICENSE  README.md  docker-compose.test.yml  docker-compose.yml  package.json
apps/api/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.patch  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 3beeed7119fe_add_sprint_plan_ai_fields.py  5ea8e88c74f8_add_rebalance_proposals_table.py  7f3a2b1c8d90_add_slack_channel_to_projects.py  8a9b1c2d3e4f_add_teams_channel_to_projects.py  9c3d4e5f6a1b_make_audit_actor_id_nullable.py  a1b2c3d4e5f6_timeline_revamp_sprint1.py  a3c9f1d42e01_add_imported_projects_and_user_prefs.py  a7c4e1d2b9f3_cloud_native_phase_ordering.py  b78fb27e9622_initial_schema.py  b7c8d9e0f1a2_add_notes_table.py  c5d8e2f17a03_add_project_scope_to_work_items_iterations.py  c8b3a5e7f0d1_add_work_item_ai_phase_classification.py  d4a7f3c81e02_add_project_insights_and_suggested_priority.py  d9e1f2a3b4c5_backfill_team_members_drift.py  e6b2a4f93d17_add_project_phases_and_assignment_rules.py  e7f1c8a4b3d2_add_overdue_alert_tracking.py  (+5 more)
apps/api/app/: config.py  database.py  dependencies.py  main.py
apps/api/app/adapters/: sync.py  (+3 more)
apps/api/plan2sprint_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/scripts/: diag_standup_state.py  diag_webhook_deliveries.py  diag_webhook_state.py  redeliver_all_failed.py  seed.py  seed_test_data.py  trigger_webhook_redeliver.py  verify_standup_fix.py
apps/api/tests/: conftest.py  test_isolation.py  test_webhook_endpoints.py  test_webhook_security.py
(+327 files in other folders)
